# system-monitor

./: .gitignore  CMakeLists.txt
includes/: builder.h  cpu.h  memory.h  tui.h
src/: builder.cpp  main.cpp
src/cpu/: cpu.cpp
src/memory/: memory.cpp
src/tui/: tui.cpp
